--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       overflow: hidden;
       font-family: "Rosario", "Xin Gothic", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
     }
+    #container {
+      cursor: pointer;
+    }
     #panel {
       position: fixed;
       top: 0;
