--- a/index.html
+++ b/index.html
@@ -28,17 +28,35 @@
       padding: 0.5rem 3rem;
       border-bottom-left-radius: 1.5rem;
       border-bottom-right-radius: 1.5rem;
-      transition-duration: 0.8s;
-      transition-timing-function: ease;
+      /* transition: background 0.8s ease; */
       box-shadow: 0 3px 3px rgba(125, 125, 125, 0.4);
     }
+
     #panel .content:hover {
       box-shadow: 0 3px 3px rgba(125, 125, 125, 0);
     }
+
     #panel .text {
       font-size: 4rem;
       margin: 0;
       padding: 2px;
+    }
+
+    #panel .indent {
+      display: inline-block;
+      position: relative;
+      vertical-align: top;
+      width: 1.5rem;
+      height: 1.5rem;
+      /* transition: background-image 0.8s ease; */
+    }
+
+    #panel .left-indent {
+      left: .34rem;
+    }
+
+    #panel .right-indent {
+      right: .34rem;
     }
     </style>
   </head>
@@ -50,10 +68,12 @@
     </div>
     <div id="container"></div>
     <div id="panel">
+      <div class="left-indent indent"></div>
       <div class="content">
         <input type="color" id="color_input" />
         <pre class="text"></pre>
       </div>
+      <div class="right-indent indent"></div>
     <div>
     <script>
       var isOnline = location.protocol === 'https:';
