--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       padding: 0.1rem 3rem;
       border-bottom-left-radius: 2rem;
       border-bottom-right-radius: 2rem;
+      transition: box-shadow 1s ease;
       box-shadow: 0 3px 3px rgba(125, 125, 125, 0.4);
     }
 
